added full ci/cd pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,12 @@
-name: CI Pipeline
+name: CI-CD Pipeline
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
-  build-and-test:
+  build-test-push-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,6 +26,28 @@ jobs:
       run: |
         python -m unittest discover tests
 
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: tahsinuldev
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
     - name: Build Docker image
       run: |
-        docker build -t flask-devops-app .
+        docker build -t tahsinuldev/flask-devops-app:latest .
+
+    - name: Push Docker image
+      run: |
+        docker push tahsinuldev/flask-devops-app:latest
+
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          docker pull tahsinuldev/flask-devops-app:latest
+          docker stop flask-app || true
+          docker rm flask-app || true
+          docker run -d -p 80:5000 --restart always --name flask-app tahsinuldev/flask-devops-app:latest
